Codacy cleanup